--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,16 +1,16 @@
-FROM mcr.microsoft.com/devcontainers/javascript-node:18
+FROM mcr.microsoft.com/devcontainers/javascript-node:20
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    opam swipl julia python3 python3-pip
+#     opam swipl julia python3 python3-pip
 
 # Initialize OPAM for Coq
-RUN opam init --disable-sandboxing \
-    && eval $(opam env) \
-    && opam install coq
+# RUN opam init --disable-sandboxing \
+#     && eval $(opam env) \
+#     && opam install coq
 
 # Install AGI tools and libraries
-RUN pip3 install ReservoirPy jax flax pennylane
+# RUN pip3 install ReservoirPy jax flax pennylane
 
 # Install Prolog (SWI-Prolog)
 RUN apt-get install -y swi-prolog
